<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLastLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LastKnown"/>

    <TextView
        android:id="@+id/tvLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lat"/>

    <TextView
        android:id="@+id/tvLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Long"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Stop"
            android:layout_weight="1"/>


    </LinearLayout>

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Check"/>


</LinearLayout>